fixed animation being jumpy, added current weather desc

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 body {
 	max-width: 100%;
 	background-color: black;
+	overflow-y: hidden;
 }
 
 .wrapper {
